name:                accdemo
version:             0.1.0.0
synopsis:            ARSim ACC demo
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Oskar Abrahamsson
maintainer:          aboskar@chalmers.se
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  
    ChangeLog.md
  , Sequencer.hs

cabal-version:       >=1.10

executable accdemo
  main-is:             Simulink.hs
  default-language:    Haskell2010
  ghc-options:         -O2
  build-depends:       
      base == 4.*
    , NewARSim

executable dummycar
  main-is:             DummyCar.hs
  default-language:    Haskell2010
  ghc-options:         -O2
  build-depends:       
      base == 4.*
    , easyplot
    , NewARSim
