name:                accdemo
version:             0.1.0.0
synopsis:            ARSim ACC demo
description:         Adaptive Cruise Control demonstration for use with ARSim
                     and Simulink. Includes a small library of usable
                     components, such as vehicle velocity estimation, PD-, PI-
                     and PID-controllers, and a ABS controller.
license:             BSD3
license-file:        LICENSE
author:              Oskar Abrahamsson <aboskar@chalmers.se>,
                     Johan Nordlander  <johnordl@chalmers.se>
maintainer:          Oskar Abrahamsson <aboskar@chalmers.se>
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  
    ChangeLog.md
  , ACC.hs
  , Generic.hs
  , Gearbox.hs
  , NewABS2.hs
  , PID.hs
  , Target.hs
  , Vehicle.hs

cabal-version:       >=1.10

executable accdemo
  main-is:             Simulink.hs
  default-language:    Haskell2010
  ghc-options:         -O2
  build-depends:       
      base     >= 4.0 && <= 5.0
    , NewARSim >= 0.3
    , random   >= 1.1

executable dummycar
  main-is:             DummyCar.hs
  default-language:    Haskell2010
  ghc-options:         -O2
  build-depends:       
      base     >= 4.0 && <= 5.0
    , easyplot
    , NewARSim >= 0.3
