name:                ARXML
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Johan Nordlander
maintainer:          johnordl@chalmers.se
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable ARXML
  main-is:             ARXML.hs
  -- other-modules:
  other-extensions:    OverloadedStrings, RecordWildCards
  build-depends:
        NewARSim >= 0.3,
        base >=4.8 && <4.9,
        directory >=1.2 && <1.3,
        filepath >=1.4 && <1.5,
        multimap >=1.2 && <1.3,
        pretty >=1.1 && <1.2,
        text >=1.2 && <1.3,
        unix >=2.7 && <2.8,
        xml-conduit >=1.3 && <1.4

  -- hs-source-dirs:
  default-language:    Haskell2010
