name:                NewABS
version:             0.1.0.0
license-file:        LICENSE
author:              Johan Nordlander
maintainer:          johnordl@chalmers.se
build-type:          Simple
cabal-version:       >=1.10

executable NewABS
    main-is:            NewABS.hs
    ghc-options:        -O2
    other-extensions:   DeriveDataTypeable, TypeFamilies, RecordWildCards, DeriveAnyClass
  
    build-depends:      base >=4.8 && <4.9, NewARSim >=0.3 && <0.4, easyplot >=1.0 && <1.1, random >=1.1 && <1.2
  
    -- hs-source-dirs:      
  
    default-language:    Haskell2010
  