name:                NewABS
version:             0.1.0.0
license-file:        LICENSE
author:              Johan Nordlander
maintainer:          johnordl@chalmers.se
build-type:          Simple
cabal-version:       >=1.10

executable NewABS
    main-is:            NewABS.hs
    ghc-options:        -O2
    other-extensions:   
      DeriveDataTypeable, 
      TypeFamilies, 
      RecordWildCards, 
      DeriveAnyClass
  
    -- Relaxed restrictions for GHC 8:
    build-depends:      
      base == 4.*, 
      NewARSim,
      easyplot,
      random
  
    default-language:    Haskell2010
  
