name:                NewABS
version:             0.1.0.0
license-file:        LICENSE
author:              Johan Nordlander
maintainer:          johnordl@chalmers.se
build-type:          Simple
cabal-version:       >=1.10

-- Stand-alone simulation
executable NewABS
    main-is:            Standalone.hs
    ghc-options:        -O2
    other-modules:      NewABS
    other-extensions:   
      DeriveDataTypeable, 
      TypeFamilies, 
      RecordWildCards, 
      DeriveAnyClass
  
    -- Relaxed restrictions for GHC 8:
    build-depends:      
      base == 4.*, 
      NewARSim,
      easyplot,
      random
  
    default-language:    Haskell2010
 
-- External simulation
executable NewABSExt
    main-is:            Simulink.hs
    ghc-options:        -O2
    other-modules:      NewABS
    other-extensions:   
      DeriveDataTypeable, 
      TypeFamilies, 
      RecordWildCards, 
      DeriveAnyClass
  
    -- Relaxed restrictions for GHC 8:
    build-depends:      
      base == 4.*, 
      NewARSim,
      random
  
    default-language:    Haskell2010

-- External simulation, launching the Simulink
-- component from Haskell
executable NewABSExtD
    main-is:            SimulinkDrive.hs
    ghc-options:        -O2
    other-modules:      NewABS
    other-extensions:   
      DeriveDataTypeable, 
      TypeFamilies, 
      RecordWildCards, 
      DeriveAnyClass
  
    -- Relaxed restrictions for GHC 8:
    build-depends:      
      base == 4.*, 
      NewARSim,
      random
  
    default-language:    Haskell2010

