name:                NewARSim
version:             0.3.0.0
-- synopsis:
-- description:
homepage:            https://github.com/josefs/autosar
license:             BSD3
license-file:        LICENSE
author:              Johan Nordlander
maintainer:          johnordl@chalmers.se
-- copyright:
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
    NewARSim

  other-modules:
    Dynamics, Speculation2, Speculation3

  default-extensions:
    FlexibleContexts
    FlexibleInstances
    GADTs
    MultiParamTypeClasses
    FunctionalDependencies
    RankNTypes
    ExistentialQuantification

  build-depends:
    base >=4.6 && <4.9,
    operational,
    easyplot,
    mtl,
    containers,
    random,
    syb

  default-language:    Haskell2010

test-suite NewABS
  type: exitcode-stdio-1.0

  hs-source-dirs: .

  main-is: NewABS.hs

  default-language:    Haskell2010

  build-depends:
    base,
    NewARSim
