name:                NewARSim
version:             0.3.0.0
-- synopsis:
-- description:
homepage:            https://github.com/josefs/autosar
license:             BSD3
license-file:        LICENSE
author:              Johan Nordlander
maintainer:          johnordl@chalmers.se
-- copyright:
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
    NewARSim

  other-modules:
    Dynamics, Speculation2, Speculation3

  default-extensions:
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    FunctionalDependencies
    RankNTypes
    ExistentialQuantification

  build-depends:
    base == 4.*,
    containers,
    easyplot,
    exceptions,
    mtl,
    operational,
    random,
    syb,
    vector,
    unix

  default-language:    Haskell2010

