name:                arsim-examples
version:             0.1.0.0
synopsis:            Some examples for ARSim written in the AUTOSAR EDSL.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Oskar Abrahamsson <aboskar@chalmers.se>,
                     Johan Nordlander <johnordl@chalmers.se>
maintainer:          Oskar Abrahamsson <aboskar@chalmers.se> 
-- copyright:           
build-type:          Simple
extra-source-files:
    Examples/ACC.hs,
    Examples/ABS.hs,
    Examples/TicketDispenser.hs
cabal-version:       >=1.10

library
  exposed-modules:
    -- Examples
    AUTOSAR,

    -- ABS example (Simulink)
    AUTOSAR.ABS.ABS,
    AUTOSAR.ABS.Simulink,

    -- ACC example (Simulink)
    AUTOSAR.ACC.ACC,
    AUTOSAR.ACC.Gearbox,
    AUTOSAR.ACC.Revlimit,
    AUTOSAR.ACC.Simulink,
    AUTOSAR.ACC.Vehicle,

    -- Shared modules
    AUTOSAR.Shared.Generic,
    AUTOSAR.Shared.PID,
    AUTOSAR.Shared.Velocity
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    base     >=4.9 && <4.10,
    arsim    >=0.3 && <0.4,
    easyplot >=1.0 && <1.1,
    random   >=1.1 && <1.2
  default-language:    Haskell2010

executable acc
  main-is:             ACC.hs
  default-language:    Haskell2010
  ghc-options:         -O2
  build-depends:      
    base           >=4.9 && <4.10,
    arsim-examples >=0.1 && <0.2
  hs-source-dirs:      Examples

executable abs
  main-is:             ABS.hs
  default-language:    Haskell2010
  ghc-options:         -O2
  build-depends:      
    base           >=4.9 && <4.10,
    arsim-examples >=0.1 && <0.2
  hs-source-dirs:      Examples

executable ticket
  main-is:             TicketDispenser.hs
  default-language:    Haskell2010
  ghc-options:         -O2
  build-depends:
    base       >= 4.9 && <4.10,
    arsim      >= 0.3 && <0.4,
    QuickCheck >= 2.9 && <2.10,
    random     >= 1.1 && <1.2
  hs-source-dirs:      Examples

