-- TODO: 
--   Add synopsis, update copyrighy, author(s)/maintainer(s) et cetera.
name:                arsim 
version:             0.3.0.0
-- synopsis:
-- description:
homepage:            https://github.com/josefs/autosar
license:             BSD3
license-file:        LICENSE
author:              Johan Nordlander
maintainer:          johnordl@chalmers.se
-- copyright:
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
    AUTOSAR.ARSim

  other-modules:
    Dynamics

  default-extensions:
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    FunctionalDependencies
    RankNTypes
    ExistentialQuantification

  -- TODO: Set these ranges
  build-depends:
    base        >=4.8  && <4.10, 
    containers  >=0.5  && <0.6,
    directory   >=1.2  && <1.3,
    exceptions  >=0.8  && <0.9,
    filepath    >=1.4  && <1.5,
    mtl         >=2.2  && <2.3,
    operational >=0.2  && <0.3,
    process     >=1.4  && <1.5,
    QuickCheck  >=2.8  && <2.10,
    random      >=1.1  && <1.2,
    syb         >=0.6  && <0.7,
    unix        >=2.7  && <2.8,
    vector      >=0.11 && <0.12,
    tf-random   >=0.5 && <0.6

  default-language:    Haskell2010

